--- a/demo.html
+++ b/demo.html
@@ -115,5 +115,6 @@
      document.getElementsByClassName("show")[0].style.marginLeft="-"+520*(a-1)+"px";
    }
   </script>
+	 <a href="https://github.com/wuxia2001/loveyue">跳转</a>
  </body>
 </html>
