--- a/demo.html
+++ b/demo.html
@@ -114,7 +114,8 @@
    function fla(a){
      document.getElementsByClassName("show")[0].style.marginLeft="-"+520*(a-1)+"px";
    }
-  </script>
-	 <a href="https://github.com/wuxia2001/loveyue">跳转</a>
+  </script><hr>
+	 <br>
+  <a href="https://github.com/wuxia2001/loveyue">跳转</a>
  </body>
 </html>
